Added more to Flask

--- a/flaskapp/app/templates/index.html
+++ b/flaskapp/app/templates/index.html
@@ -1,21 +1,45 @@
-{% extends "layout.html" %}
-{% block content %}
-    <h1>Learnr</h1>
-    <form action="/signup">
-      <button type="submit">Sign up today!</button>
-    </form>
-    <form action="/meetup">
-    	<button type="submit"> Create a meetup!</button>
-    </form>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Learnr</title>
+<link href="css/styles.css" rel="stylesheet" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 
-    <form action="/attend">
-    	<button type="submit"> Attend an event!</button>
-    	</form>
-   <form action="/checkattendance">
-    	<button type="submit"> Check attendance!</button>
-    	</form>
-    <form action="/getallmeetups">
-      <button type="submit">See all meetups!</button>
-    </form>
-   
-{% endblock %}
+<!---menu--->
+<link rel="stylesheet" href="css/superfish.css" media="screen">
+<script src="js/jquery-1.9.0.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>
+
+<header>		
+  <div class="header-wrap">
+  <div class="logo">
+    <h1>Learnr</h1>
+  </div>
+  <div class="menu">
+    <ul class="sf-menu" id="example">
+      <li><a href="index">Home</a></li>
+      <li><a href="meetup">Create Meetup</a></li>
+      <li> <a href="attend">Attend Event </a> </li>
+      <li> <a href="checkattendance">Check Attendance</a></li>
+	  <li><a href="signup">Sign Up</a></li>
+	  <li><a href="login">Login</a></li>
+    </ul>
+  </div>
+</div>
+</header>
+
+<div class="page">
+  <div class="panel">
+    <div class="title">
+		<h1>Welcome to Learnr Homepage</h1>
+	</div>
+	<div class="content"> 
+		<p>Hello! Welcome to Learnr. If you haven't yet, please sign up for our page. We want to create communities of people learning together</p>
+	</div>
+	
+	{% if username %}
+		<br><br><br><p><strong>You are logged in as:</strong> {{ username }}</p>
+	{% endif %}
+</div>
