--- a/flaskapp/app/templates/getmeetupinfo.html
+++ b/flaskapp/app/templates/getmeetupinfo.html
@@ -1,31 +1,67 @@
-{% extends "layout.html" %}
-{% block content %}
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Learnr</title>
+<link href="css/styles.css" rel="stylesheet" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 
+<!---menu--->
+<link rel="stylesheet" href="css/superfish.css" media="screen">
+<script src="js/jquery-1.9.0.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>
 
+<header>		
+  <div class="header-wrap">
+  <div class="logo">
+    <h1>Learnr</h1>
+  </div>
+  <div class="menu">
+    <ul class="sf-menu" id="example">
+      <li><a href="index">Home</a></li>
+      <li><a href="meetup">Create Meetup</a></li>
+      <li> <a href="attend">Attend Event </a> </li>
+      <li> <a href="checkattendance">Check Attendance</a></li>
+	  <li><a href="signup">Sign Up</a></li>
+	  <li><a href="login">Login</a></li>
+    </ul>
+  </div>
+</div>
+</header>
 
-    <h1>Get info for a meetup!</h1>
-    
-    {% if error %} 
-    <p class=error><strong>Error:</strong> {{ error }}
-    {% endif %}  
-    
-    <input type = text name =a></input>
-    <p name = a></p>
+<div class="page">
+	<div class="panel">
+		<div class="title">
+			<h1>Get info for a meetup!</h1>
+			{% if error %} 
+			<p class=error><strong>Error:</strong> {{ error }}
+			{% endif %}  
+			
+			<div class="contact-form mar-top30">
+				<label> <span>Event ID:</span>
+				  <input type = "text" name ="a"/>
+				</label>
+				
+				<h3 name = "a"></h3>
+				  <button class="button" onclick="myfunction()">Load</button>
+				  
 
-    <button onclick = "myfunction()">Load JSON!</a>
+          </div>
 
     <script>
 
      function myfunction() {  $.getJSON("http://localhost:5000/_minfo", {
       a: $('input[name="a"]').val()
        }, function(data) {
-        $('p[name="a"]').text("")
+        $('h3[name="a"]').text("")
         for (var key in data){
-          $('p[name="a"]').append("<br>" + key + ':' + data[key] + "<br>");
+          $('h3[name="a"]').append("<br>" + key + ": " + data[key]);
         }
       });
       return false;}
   </script>
-
-
-{% endblock %}
+  
+		</div>
+	</div>
+</div>
