--- a/flaskapp/app/templates/meetup.html
+++ b/flaskapp/app/templates/meetup.html
@@ -1,17 +1,67 @@
-{% extends "layout.html" %}
-{% block content %}
-    <h1>Create a meetup!</h1>
-    
-    {% if error %} 
-    <p class=error><strong>Error:</strong> {{ error }}
-    {% endif %}  
-    <form method="post" action="{{ url_for('createmeetup') }}">
-      <p><label>Starttime:</label> <input type="text" name="starttime"></p>  
-      <p><label>Endtime:</label> <input type="text" name="endtime"></p>
-      <p><label>Classname:</label> <input type="text" name="classname"></p>  
-      <p><label>Subject:</label> <input type="text" name="subject"></p>
-      <p><label>Createdby:</label><input type = "integer" name = "createdby"></p>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Learnr</title>
+<link href="css/styles.css" rel="stylesheet" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 
-      <p><button type="submit">Send</button></p>
-    </form>
-{% endblock %}
+<!---menu--->
+<link rel="stylesheet" href="css/superfish.css" media="screen">
+<script src="js/jquery-1.9.0.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>
+
+<header>		
+  <div class="header-wrap">
+  <div class="logo">
+    <h1>Learnr</h1>
+  </div>
+  <div class="menu">
+    <ul class="sf-menu" id="example">
+      <li><a href="index">Home</a></li>
+      <li><a href="meetup">Create Meetup</a></li>
+      <li> <a href="attend">Attend Event </a> </li>
+      <li> <a href="checkattendance">Check Attendance</a></li>
+	  <li><a href="signup">Sign Up</a></li>
+	  <li><a href="login">Login</a></li>
+    </ul>
+  </div>
+</div>
+</header>
+
+<div class="page">
+	<div class="panel">
+		<div class = "title">
+		
+		<h1>Create an event</h1>
+		<h3>Time Format: YYYY/MM/DD HH:MM:SS</h3>
+          <div class="contact-form mar-top30">
+			<form method="post" action="{{ url_for('createmeetup') }}">
+				<label> <span>Start Time:</span>
+					<input type="text" class="input_text" name="starttime"/>
+				</label>
+				<label> <span>End Time:</span>
+					<input type="text" class="input_text" name="endtime"/>
+				</label>
+				<label> <span>Classname:</span>
+					<input type="text" class="input_text" name="classname"/>
+				</label>
+				<label> <span>Subject:</span>
+					<input type="text" class="input_text" name="subject"/>
+				</label>
+				<label> <span>Created by:</span>
+					<input type="text" class="input_text" name="createdby"/>
+				</label>
+					<button type="submit" class="button">Submit</button>
+
+			</form>
+          </div>
+		  
+		{% if error %} 
+		<p class=error><strong>Error:</strong> {{ error }}
+		{% endif %}  
+        </form>
+		</div>
+	</div>
+</div>
