--- a/flaskapp/app/templates/signup.html
+++ b/flaskapp/app/templates/signup.html
@@ -1,13 +1,56 @@
-{% extends "layout.html" %}
-{% block content %}
-    <h1>Create a user!</h1>
-    
-    {% if error %} 
-    <p class=error><strong>Error:</strong> {{ error }}
-    {% endif %}  
-    <form method="post" action="{{ url_for('signedup') }}">
-      <p><label>Username:</label> <input type="text" name="username"></p>  
-      <p><label>Password:</label> <input type="text" name="password"></p> 
-      <p><button type="submit">Send</button></p>
-    </form>
-{% endblock %}
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Learnr</title>
+<link href="css/styles.css" rel="stylesheet" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
+
+<!---menu--->
+<link rel="stylesheet" href="css/superfish.css" media="screen">
+<script src="js/jquery-1.9.0.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>
+
+<body>		
+  <div class="header-wrap">
+  <div class="logo">
+    <h1>Learnr</h1>
+  </div>
+  <div class="menu">
+    <ul class="sf-menu" id="example">
+      <li><a href="index">Home</a></li>
+      <li><a href="meetup">Create Meetup</a></li>
+      <li> <a href="attend">Attend Event </a> </li>
+      <li> <a href="checkattendance">Check Attendance</a></li>
+	  <li><a href="signup">Sign Up</a></li>
+	  <li><a href="login">Login</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="page">
+	<div class="panel">
+		<div class = "title">
+			
+		<h1>Create a user!</h1>
+          <div class="contact-form mar-top30">
+			<form method="post" action="{{ url_for('signedup') }}">
+            <label> <span>Username</span>
+            <input type="text" class="input_text" name="username"/>
+            </label>
+            <label> <span>Password</span>
+            <input type="password" class="input_text" name="password"/>
+            </label>
+            <button type="submit" class="button">Submit</button>
+			</form>
+            </label>
+          </div>
+		  
+			{% if error %} 
+			<p class=error><strong>Error:</strong> {{ error }}
+			{% endif %}  
+        </form>
+		</div>
+	</div>
+</div>
