--- a/flaskapp/app/templates/checkattendance.html
+++ b/flaskapp/app/templates/checkattendance.html
@@ -12,7 +12,7 @@
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
 
-<header>		
+<body>		
   <div class="header-wrap">
   <div class="logo">
     <h1>Learnr</h1>
@@ -29,15 +29,17 @@
   </div>
 </div>
 </header>
-
 <div class="page">
 	<div class="panel">
 		<div class = "title">
 		
 		<h1>Check Attendance</h1>
-		<h3>Enter Event ID to check your attendance</h3>
+		<h3>Enter your User ID and Event ID to check your attendance</h3>
 		  <div class="contact-form mar-top30">
 			<form method="post" action="{{ url_for('getattend') }}">
+				<label> <span>User ID:</span>
+				  <input type="text" class="input_text" name="uid"/>
+				</label>
 				<label> <span>Event ID:</span>
 				  <input type="text" class="input_text" name="eid"/>
 				</label>
