--- a/flaskapp/app/templates/login.html
+++ b/flaskapp/app/templates/login.html
@@ -1,16 +1,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Learnr</title>
-<link href="css/styles.css" rel="stylesheet" type="text/css" />
-<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Learnr</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 
-<!---menu--->
-<link rel="stylesheet" href="css/superfish.css" media="screen">
-<script src="js/jquery-1.9.0.min.js"></script>
-<script src="js/hoverIntent.js"></script>
-<script src="js/superfish.js"></script>
+    <!---menu--->
+    <link rel="stylesheet" href="css/superfish.css" media="screen">
+    <script src="js/jquery-1.9.0.min.js"></script>
+    <script src="js/hoverIntent.js"></script>
+    <script src="js/superfish.js"></script>
+</head>
 
 <header>		
   <div class="header-wrap">
@@ -23,8 +24,8 @@
       <li><a href="meetup">Create Meetup</a></li>
       <li> <a href="attend">Attend Event </a> </li>
       <li> <a href="checkattendance">Check Attendance</a></li>
-	  <li><a href="signup">Sign Up</a></li>
 	  <li><a href="login">Login</a></li>
+	  <li><a href="signup">Sign Up</a></li>
     </ul>
   </div>
 </div>
@@ -39,15 +40,18 @@
 		{% endif %}
           <div class="contact-form mar-top30">
 			<form method="post" action="{{ url_for('loggedin') }}">
-            <label> <span>Username</span>
-            <input type="text" class="input_text" name="username"/>
-            </label>
-            <label> <span>Password</span>
-            <input type="password" class="input_text" name="password"/>
-            </label>
-            <button type="submit" class="button">Submit</button>
+                <label> <span>Username</span>
+                    <input type="text" class="input_text" name="username"/>
+                </label>
+
+                <label> <span>Password</span>
+                    <input type="password" class="input_text" name="password"/>
+                </label>
+
+                <label>
+                    <button type="submit" class="button">Submit</button>
+                </label>
 			</form>
-            </label>
           </div>
 	
 	
@@ -57,5 +61,3 @@
 <script>
 
 </script>
-
-
