--- a/flaskapp/app/templates/getmeetupinfo.html
+++ b/flaskapp/app/templates/getmeetupinfo.html
@@ -23,8 +23,8 @@
       <li><a href="meetup">Create Meetup</a></li>
       <li> <a href="attend">Attend Event </a> </li>
       <li> <a href="checkattendance">Check Attendance</a></li>
-	  <li><a href="signup">Sign Up</a></li>
 	  <li><a href="login">Login</a></li>
+	  <li><a href="signup">Sign Up</a></li>
     </ul>
   </div>
 </div>
@@ -44,14 +44,14 @@
 				</label>
 				
 				<h3 name = "a"></h3>
-				  <button class="button" onclick="myfunction()">Load</button>
+				  <button class="button" onclick="displayInfo()">Load</button>
 				  
 
           </div>
 
     <script>
 
-     function myfunction() {  $.getJSON("http://localhost:5000/_minfo", {
+     function displayInfo() {  $.getJSON("http://localhost:5000/_minfo", {
       a: $('input[name="a"]').val()
        }, function(data) {
         $('h3[name="a"]').text("")
