--- a/flaskapp/app/templates/index.html
+++ b/flaskapp/app/templates/index.html
@@ -36,7 +36,7 @@
 		<h1>Welcome to Learnr Homepage</h1>
 	</div>
 	<div class="content"> 
-		<p>Hello! Welcome to Learnr. If you haven't yet, please sign up for our page. We want to create communities of people learning together</p>
+		<p>Hello! Welcome to Learnr. If you haven't yet, please sign up. We want to create communities of people learning together.</p>
 	</div>
 	
 	{% if username %}
