Fixed up even more things

--- a/flaskapp/app/templates/meetupinfo.html
+++ b/flaskapp/app/templates/meetupinfo.html
@@ -19,3 +19,4 @@
             <p>Location:</p>
             {{googlemap("meetup_map", lat=40.820189, lng=-73.949499, markers=[(40.820189, -73.949499)])}}
 
+{% endblock %}
