--- a/flaskapp/app/templates/meetupinfo.html
+++ b/flaskapp/app/templates/meetupinfo.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<head>
+    {{ themap.js }}
+</head>
+
+<body>
 
 <div class="page">
     <div class="panel">
@@ -10,6 +15,7 @@
             <p class=error><strong>Error:</strong> {{ error }}
             {% endif %}
 
+            <p><button class="button" style="width:160px; background-size:160px 30px; border:none;">Attend this event</button></p>
             <p><strong>Times are in format: YYYY/MM/DD HH:MM:SS</strong></p>
             <p>Meetup ID: {{ meetid }}</p>
             <p>Subject: {{ subject }}</p>
@@ -17,5 +23,10 @@
             <p>End Time: {{ endtime }}</p>
             <p>Coordinator: {{ coordinator }}</p>
             <p>Location:</p>
-            {{googlemap("meetup_map", lat=40.820189, lng=-73.949499, markers=[(40.820189, -73.949499)])}}
+            {{ themap.html }}
+        </div>
+    </div>
+</div>
 
+</body>
+{% endblock %}
