--- a/flaskapp/app/templates/layout.html
+++ b/flaskapp/app/templates/layout.html
@@ -2,12 +2,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Learnr</title>
-<link href="css/styles.css" rel="stylesheet" type="text/css" />
+<link href="../static/css/styles.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 
 <!---menu--->
-<link rel="stylesheet" href="css/superfish.css" media="screen">
+<link rel="stylesheet" href="../static/css/superfish.css" media="screen">
 <script src="js/jquery-1.9.0.min.js"></script>
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
