--- a/flaskapp/app/templates/layout.html
+++ b/flaskapp/app/templates/layout.html
@@ -6,11 +6,11 @@
 <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 
-<!---menu--->
+<!---menu-->
 <link rel="stylesheet" href="../static/css/superfish.css" media="screen">
-<script src="js/jquery-1.9.0.min.js"></script>
-<script src="js/hoverIntent.js"></script>
-<script src="js/superfish.js"></script>
+<script src="../static/js/jquery-1.9.0.min.js"></script>
+<script src="../static/js/hoverIntent.js"></script>
+<script src="../static/js/superfish.js"></script>
 
 <header>		
   <div class="header-wrap">
