--- a/flaskapp/app/templates/meetupinfo.html
+++ b/flaskapp/app/templates/meetupinfo.html
@@ -1,6 +1,63 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<head>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+      }
+      .controls {
+        margin-top: 10px;
+        border: 1px solid transparent;
+        border-radius: 2px 0 0 2px;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        height: 32px;
+        outline: none;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+      }
+
+      #pac-input {
+        background-color: #fff;
+        font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+        margin-left: 12px;
+        padding: 0 11px 0 13px;
+        text-overflow: ellipsis;
+        width: 300px;
+      }
+
+      #pac-input:focus {
+        border-color: #4d90fe;
+      }
+
+      .pac-container {
+        font-family: Roboto;
+      }
+
+      #type-selector {
+        color: #fff;
+        background-color: #4d90fe;
+        padding: 5px 11px 0px 11px;
+      }
+
+      #type-selector label {
+        font-family: Roboto;
+        font-size: 13px;
+        font-weight: 300;
+      }
+      #target {
+        width: 345px;
+      }
+    </style>
+</head>
+
 <body>
 
 <div class="page">
@@ -28,10 +85,108 @@
 
                 <label>Coordinator: {{ coordinator }}</label><br>
 
-                <!-- jesus christ what kind of awful hackjob wtf is this you should be ashamed -->
-                <!-- screw html5 just use frameborder none of the equivalent options are supported by all browsers anyway-->
-                <!-- TODO: negative values for lat/long should be ok but they arent-->
-                <center><iframe height="500px" width="500px" frameborder="0" src="{{mapurl}}">Your browser is not compatible with this page.</iframe></center>
+                <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+                <div id="map"></div>
+                    <script>
+
+                      var map;
+                      var marker;
+
+                      function addMarker(location) {
+                        var marker = new google.maps.Marker({
+                          position: location,
+                          map: map
+                        });
+                      }
+
+                      function initAutocomplete(lat,lng) {
+                        var center = {lat:lat, lng:lng};
+                        map = new google.maps.Map(document.getElementById('map'), {
+                          center: center,
+                          zoom: 13,
+                          mapTypeId: google.maps.MapTypeId.ROADMAP
+                        });
+
+                        marker = new google.maps.Marker({position:center, map:map});
+
+                        map.addListener('click', function(event) {
+                          marker.setPosition(event.latLng);
+                        });
+
+                        // Create the search box and link it to the UI element.
+                        var input = document.getElementById('pac-input');
+                        var searchBox = new google.maps.places.SearchBox(input);
+                        map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+                        // Bias the SearchBox results towards current map's viewport.
+                        map.addListener('bounds_changed', function() {
+                          searchBox.setBounds(map.getBounds());
+                        });
+
+                        // Listen for the event fired when the user selects a prediction and retrieve
+                        // more details for that place.
+                        searchBox.addListener('places_changed', function() {
+                          var places = searchBox.getPlaces();
+
+                          if (places.length == 0) {
+                            return;
+                          }
+
+                          // Clear out the old markers.
+                          markers.forEach(function(marker) {
+                            marker.setMap(null);
+                          });
+                          markers = [];
+
+                          // For each place, get the icon, name and location.
+                          var bounds = new google.maps.LatLngBounds();
+                          places.forEach(function(place) {
+                            var icon = {
+                              url: place.icon,
+                              size: new google.maps.Size(71, 71),
+                              origin: new google.maps.Point(0, 0),
+                              anchor: new google.maps.Point(17, 34),
+                              scaledSize: new google.maps.Size(25, 25)
+                            };
+
+                            // Create a marker for each place.
+                            markers.push(new google.maps.Marker({
+                              map: map,
+                              icon: icon,
+                              title: place.name,
+                              position: place.geometry.location
+                            }));
+
+                            if (place.geometry.viewport) {
+                              // Only geocodes have viewport.
+                              bounds.union(place.geometry.viewport);
+                            } else {
+                              bounds.extend(place.geometry.location);
+                            }
+                          });
+                          map.fitBounds(bounds);
+                        });
+                    }
+
+                    function initMap(lat,lng) {
+                      var center = {lat:lat, lng:lng};
+
+                      var map = new google.maps.Map(document.getElementById('map'), {
+                        zoom: 15,
+                        center: center
+                      });
+                    }
+
+                    function initialize() {
+                       var lat={{lat}};
+                       var lng={{lng}};
+                       //initMap(lat,lng);
+                       initAutocomplete(lat,lng);
+                    }
+
+                    </script>
+                    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDm--G1kYbbWlRnXL68TtJdFinSTm71Xa0&libraries=places&callback=initialize">
+                    </script>
             </form>
 
         </div>
