--- a/flaskapp/app/templates/meetup.html
+++ b/flaskapp/app/templates/meetup.html
@@ -110,105 +110,13 @@
 				</label>
 
                 <label> <span>Location:</span>
-                <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-                <div id="map"></div>
+                    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+                    <div id="map"></div>
+                    <script src="../static/js/maps.js"></script>
                     <script>
-
-                      var map;
-                      var marker;
-
-                      function addMarker(location) {
-                        var marker = new google.maps.Marker({
-                          position: location,
-                          map: map
-                        });
-                      }
-
-                      function initAutocomplete(lat,lng) {
-                        var center = {lat:lat, lng:lng};
-                        map = new google.maps.Map(document.getElementById('map'), {
-                          center: center,
-                          zoom: 13,
-                          mapTypeId: google.maps.MapTypeId.ROADMAP
-                        });
-
-                        marker = new google.maps.Marker({position:center, map:map});
-
-                        map.addListener('click', function(event) {
-                          marker.setPosition(event.latLng);
-                        });
-
-                        // Create the search box and link it to the UI element.
-                        var input = document.getElementById('pac-input');
-                        var searchBox = new google.maps.places.SearchBox(input);
-                        map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-
-                        // Bias the SearchBox results towards current map's viewport.
-                        map.addListener('bounds_changed', function() {
-                          searchBox.setBounds(map.getBounds());
-                        });
-
-                        // Listen for the event fired when the user selects a prediction and retrieve
-                        // more details for that place.
-                        searchBox.addListener('places_changed', function() {
-                          var places = searchBox.getPlaces();
-
-                          if (places.length == 0) {
-                            return;
-                          }
-
-                          // Clear out the old markers.
-                          markers.forEach(function(marker) {
-                            marker.setMap(null);
-                          });
-                          markers = [];
-
-                          // For each place, get the icon, name and location.
-                          var bounds = new google.maps.LatLngBounds();
-                          places.forEach(function(place) {
-                            var icon = {
-                              url: place.icon,
-                              size: new google.maps.Size(71, 71),
-                              origin: new google.maps.Point(0, 0),
-                              anchor: new google.maps.Point(17, 34),
-                              scaledSize: new google.maps.Size(25, 25)
-                            };
-
-                            // Create a marker for each place.
-                            markers.push(new google.maps.Marker({
-                              map: map,
-                              icon: icon,
-                              title: place.name,
-                              position: place.geometry.location
-                            }));
-
-                            if (place.geometry.viewport) {
-                              // Only geocodes have viewport.
-                              bounds.union(place.geometry.viewport);
-                            } else {
-                              bounds.extend(place.geometry.location);
-                            }
-                          });
-                          map.fitBounds(bounds);
-                        });
-                    }
-
-                    function initMap(lat,lng) {
-                      var center = {lat:lat, lng:lng};
-
-                      var map = new google.maps.Map(document.getElementById('map'), {
-                        zoom: 15,
-                        center: center
-                      });
-                    }
-
-                    function initialize() {
-                       var lat={{lat}};
-                       var lng={{lng}};
-                       //initMap(lat,lng);
-                       initAutocomplete(lat,lng);
-                    }
-
+                        function initialize() {
+                            initAutocomplete({{lat}},{{lng}});
+                        }
                     </script>
                     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDm--G1kYbbWlRnXL68TtJdFinSTm71Xa0&libraries=places&callback=initialize">
                     </script>
