--- a/flaskapp/app/templates/login.html
+++ b/flaskapp/app/templates/login.html
@@ -6,7 +6,7 @@
     <div class="title">
 		<h1>Login</h1>
 		{% if username %}
-			<br><p><strong>You are logged in as:</strong> {{ username }}</p>
+			<br><p><strong>You are already logged in as:</strong> {{ username }}</p>
 		{% endif %}
           <div class="contact-form mar-top30">
 			<form method="post" action="{{ url_for('loggedin') }}">
