Added support to get lat/long values from map, added to form to get meeting location for adding to database. Needs fixing since meetupinfo is broken now and we don't know why.

--- a/flaskapp/app/templates/meetupinfo.html
+++ b/flaskapp/app/templates/meetupinfo.html
@@ -96,7 +96,7 @@
                 {{ coordinator }}
                 {% endif %}<br>
 
-                <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+                <input id="pac-input" class="controls input_text" type="text" placeholder="Search Box">
               </div>
                 <div id = "mapcontainer" style="float: left">
                 <h1>Where is this meetup?</h1>
