--- a/flaskapp/app/templates/meetup.html
+++ b/flaskapp/app/templates/meetup.html
@@ -76,6 +76,7 @@
 		
 		<h1>Create an event</h1>
 		<h3>Time Format: YYYY/MM/DD HH:MM:SS</h3>
+        <h4>All fields are required</h4>
           <div class="contact-form mar-top30">
 			<form method="post" action="{{ url_for('createmeetup') }}">
 				<label> <span>Start Time:</span>
@@ -85,7 +86,7 @@
 			<span class="add-on">
 				<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
 				</span>
-				<input type="text" class ="input_text" name="starttime"></input>
+				<input type="text" class ="input_text" name="starttime" readonly ></input>
 				
 			</div>
     
@@ -95,22 +96,31 @@
 				<span class="add-on">
 					<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
 				</span>
-				<input type="text" class ="input_text" name="endtime"></input>
+				<input type="text" class ="input_text" name="endtime" readonly></input>
 				
 				</div>
 				</label>
 				<label> <span>Class name:</span>
-					<input type="text" class="input_text" name="classname"/>
+					<input type="text" class="input_text" name="classname" required />
 				</label>
 				<label> <span>Subject:</span>
-					<input type="text" class="input_text" name="subject"/>
+					<input type="text" class="input_text" name="subject" required />
 				</label>
 				<label> <span>Created by:</span>
-					<input type="text" class="input_text" name="createdby"/>
+					<input type="text" class="input_text" name="createdby" required />
 				</label>
 
                 <label> <span>Location:</span>
-                    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+                    <span></span>
+                    <input type="text" id="lat" class="input_text" name="lat" placeholder="Latitude" readonly />
+                    <!-- sometimes you have to let go of the why. -->
+                    <!-- just because you can doesn't mean you should. -->
+                    <!-- that said, i'm doing it anyway. we can figure out vertical alignment later -->
+                    <!-- famous last words -->
+                    <span></span>
+                    <input type="text" id="lng" class="input_text" name="lng" placeholder="Longitude" readonly />
+
+                    <input id="pac-input" class="controls input_text" type="text" placeholder="Search Box">
                     <div id="map"></div>
                     <script src="../static/js/maps.js"></script>
                     <script>
