--- a/flaskapp/app/templates/login.html
+++ b/flaskapp/app/templates/login.html
@@ -7,7 +7,8 @@
 		<h1>Login</h1>
 		{% if username %}
 			<br><p><strong>You are already logged in as:</strong> {{ username }}</p>
-		{% endif %}
+            <p><strong>Click here to log out: <a href="/signedout">Log out</a></strong></p>
+		{% else %}
           <div class="contact-form mar-top30">
 			<form method="post" action="{{ url_for('loggedin') }}">
                 <label> <span>Username</span>
@@ -23,6 +24,7 @@
                 </label>
 			</form>
           </div>
+        {% endif %}
 	
 	
 </div>
