Fixed a bug where the SQL in meetupinfo broke

--- a/flaskapp/app/templates/meetup.html
+++ b/flaskapp/app/templates/meetup.html
@@ -159,7 +159,7 @@
     </script>
 	
 
-<link href="../static/css/styles.css" rel="stylesheet" type="text/css" />
+<link href="{{../static/css/styles.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="../static/css/superfish.css" media="screen">
