Continued work on /listmeetups, made the meetupinfo page work for all cases that I can see

--- a/flaskapp/app/templates/listmeetups.html
+++ b/flaskapp/app/templates/listmeetups.html
@@ -40,7 +40,7 @@
 
 {% for m in meetups %}
 <dl>
-    <a href="/meetupinfo{{m['eid']}}">
+    <a href="/meetupinfo?m={{m['eid']}}">
       {% for key, value in m.iteritems() %}
             <dt>{{ key }}</dt>
             <dd>{{ value }}</dd>
