--- a/flaskapp/app/templates/layout.html
+++ b/flaskapp/app/templates/layout.html
@@ -26,8 +26,8 @@
     <ul class="sf-menu" id="example">
       <li><a href="index">Home</a></li>
       <li><a href="meetup">Create Meetup</a></li>
-      <li> <a href="attend">Attend Event </a> </li>
-      <li> <a href="checkattendance">Check Attendance</a></li>
+      <li> <a href="listmeetups">List Meetups </a> </li>
+      <li> <a href="search">Search for a Meetup</a></li>
 	  <li><a href="signup">Sign Up</a></li>
 	  <li><a href="login">Login</a></li>
     </ul>
